# trial-haskell

./: .gitignore  Cabal.md  License  Readme.md  TrialHaskell.cabal
BeamDemo/: BeamDemo.cabal  CHANGELOG.md  Readme.md  sqlite.sql
BeamDemo/CreateDemo/: Main.hs
BeamDemo/InsertDemo/: Main.hs
BeamDemo/MySQLDemo/MySQLDemo/: Simple.hs
BeamDemo/SelectDemo/: Main.hs
BeamDemo/SqliteDemo/SqliteDemo/: Simple.hs
Demo1/DExe/: Main.hs
HuntDemo/: CHANGELOG.md  HuntDemo.cabal  Readme.md  input.csv  input.html  input.json  input.txt  input.xml
HuntDemo/CsvDemo/: Main.hs
HuntDemo/HtmlDemo/: Main.hs
HuntDemo/HttpGetDemo/: Main.hs
HuntDemo/JsonDemo/: Main.hs
HuntDemo/TxtDemo/: Main.hs
HuntDemo/XmlDemo/: Main.hs
HuntDemo/app/: Main.hs
IODemo/: CHANGELOG.md  IODemo.cabal
IODemo/iodemo/: Main.hs
OldDemo/: .gitignore  TrialHaskell.cabal
OldDemo/Demo1/DExe/: Main.hs
OldDemo/Demo1/DLib/: LibDemo1.hs
ScottyDemo/: CHANGELOG.md  LICENSE  Readme.md  ScottyDemo.cabal
ScottyDemo/app/: Main.hs
ScottyDemo/cookiesdemo/: Main.hs
ScottyDemo/examples/: .gitignore
ScottyDemo/uploaddemo/: Main.hs
ScottyDemo2/: CHANGELOG.md  ScottyDemo2.cabal
ScottyDemo2/ScottyDemo2/: App.hs  Main.hs
ScottyDemo2/ScottyDemo2/App/: User.hs
XlsDemo/: CHANGELOG.md  XlsDemo.cabal
XlsDemo/app/: Main.hs
YesodDemo/: CHANGELOG.md  Readme.md  YesodDemo.cabal
YesodDemo/AppDemo/: Main.hs  Routes.hs
YesodDemo2/: CHANGELOG.md  YesodDemo2.cabal
YesodDemo2/AppDemo/: Main.hs
