cabal-version:      2.4
name:               HuntDemo
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             chenshenchao
maintainer:         chenshenchao@outlook.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable HuntDemo
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, directory ^>= 1.3.8.1, csv ^>= 0.1.2
    hs-source-dirs:   app
    default-language: Haskell2010
